--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FEC eFile</title>
+  <title>FECFile</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="assets/img/favicon-32x32.png" sizes="32x32">
